fabrik/internal/engine/testdata/jobs_worker_no_handlers.txt
//fabrik:jobs:worker requires at least one //fabrik:job or //fabrik:cron;
hosting a worker with no declared handlers is an error (it would build an
empty manager and, with the scheduler, reconcile an empty schedule set).
-- go.mod --
module app

go 1.26

require github.com/gofabrik/fabrik/jobs v0.0.0

replace github.com/gofabrik/fabrik/jobs => JOBSDIR
-- main.go --
package main

func main() {
	if err := run(); err != nil {
		panic(err)
	}
}
-- shared/shared.go --
package shared

import "github.com/gofabrik/fabrik/jobs"

//fabrik:provider
func NewJobStore() (jobs.Store, error) { return jobs.NewMemoryStore(), nil }

//fabrik:jobs:worker
func Worker() jobs.RuntimeConfig {
	return jobs.RuntimeConfig{Worker: jobs.WorkerConfig{Concurrency: 2}}
}
-- want/diags --
error: shared/shared.go:8:1: //fabrik:jobs:worker has no jobs to run
  help: declare at least one //fabrik:job or //fabrik:cron handler, or drop the worker
